testsuite/tests/typing-misc/pr8548_split.compilers.reference
File "ranged.ml", line 14, characters 26-36:
14 | module Test_ranged = Make(Test_range)
                               ^^^^^^^^^^
Error: Signature mismatch:
       ...
       Type declarations do not match:
         type t = [ `Before of Test.t | `Until_infinity ] range
       is not included in
         type t = [ `Before of Range.Endpoint.t | `Until_infinity ] range
       File "range_intf.ml", line 15, characters 2-36: Expected declaration
       File "range_intf.ml", line 15, characters 2-36: Actual declaration
